# Trading_v2

./: .gitignore  .spyderproject  .~lock.Alpha Evolution.odp#  Alpha Evolution.odp  Periods of Interest.txt  README.md  ToDo.txt  ipython.html  requirements.txt  test  test.xml
.spyproject/: workspace.ini
C_and_CPP/algo_cpp_utils/: CMakeLists.txt  algo_cpp_utils.kdev4
C_and_CPP/cpp_utils/: Makefile_v2  Makefile_v3
C_and_CPP/cpp_utils_build/: cmake_install.cmake  cpp_utils.layout
Config/: const_and_paths.py  fred_api_key.txt  path.py
Csource/: buildme.py  test.c
Csource/Algo_Tools/: Algo_Tools.depend
Csource/C_arraytest/: C_arraytest.h
Csource/my_C_tools/: buildme.py  my_C_tools.cbp  my_C_tools.depend  my_C_tools.layout  my_C_toolsmodule.c
Framework/Dataset/: Dataset.py  DatasetHolder.py  dataset_func.py  dataset_parser.py
Framework/Execution/: AlgoRunner.py
Framework/FeatureExtractors/: Features.py
Framework/Genetic/: Chromossome.py  Gene.py  GeneCrossSection.py  GenePCA.py  StrategyChromossome.py  sample_genes.py  test_gene.py  utils.py
Framework/Miscellaneous/: my_utils.py
Framework/Strategy/: BulkStrategySimulator.py  Strategy.py  StrategySimulation.py  Strategy_PCA.py
Miscellaneous/: my_utils.py
Miscellaneous/Cache/: CacheManager.py
Other/Demo/: VectorizedStrategy.py  VectorizedStrategy.py.orig  build_multi_dataset.py  simple_strategy.py  (+2 more)
View/: __init__.py
algo_cpp_utils/: .kdev_include_paths  cpp_utils.cpp
cpp_utils/: CMakeLists.txt  cpp_utils.cpp
cpp_utils_build/: CMakeCache.txt  Makefile  cpp_utils.cbp
tests/: test_hmm.py
(+183 files in other folders)
